* Fri Apr 28 2017 Dylan Cochran <dylan.cochran@onyxpoint.com> - 7.3.3-0
- Use global catalyst to configure package_ensure.

* Mon Apr 24 2017 Dylan Cochran <dylan.cochran@onyxpoint.com> - 7.3.2-0
- Add 'puppet_enterprise::profile::database' class definition to the pe_classlist
  and move the postgresql components under that class.

* Thu Apr 13 2017 Dylan Cochran <dylan.cochran@onyxpoint.com> - 7.3.1-0
- Add 'puppet_enterprise::profile::primary_master_replica' class definition
  to the class list to work around an issue in production

* Tue Apr 04 2017 Dylan Cochran <dylan.cochran@onyxpoint.com> - 7.3.0-0
- Add 'package_ensure' to allow users to specify that they want to use 'latest' or 'installed'

* Wed Mar 08 2017 Nick Markowski <nmarkowski@keywcorp.com> - 7.2.0-0
- Updated puppetagent_cron:
-  Added `break_puppet_lock` param so users can clearly specify when they wish
   to forcibly enable the puppet agent.
-  Added `max_disable_time param`. Updated logic to determine when to
   forcibly enable a puppet agent, and moved logic into cron.pp for
   user-friendliness.
-  Set maxruntime default of 4 hours

* Wed Mar 01 2017 Nick Miller <nick.miller@onyxpoint.com> - 7.1.1-0
- The previous audit rules relied on the puppet user existing, but in
  newer versions of puppet, the puppet user only exists on the
  puppetserver. This commit only puts auditing on the puppetserver.

* Mon Feb 20 2017 Jeanne Greuich <jeanne.greulich@onyxpoint.com> - 7.1.0-0
- Fix typos in the puppetagent cron script

* Mon Dec 10 2016 Nick Miller <nick.miller@onyxpoint.com> - 7.1.0-0
- Updated assets and versions
- Converted to puppet-strings
- Switched to the new catalyst pattern with simplib::lookup
- Strong typed module
- Set trusted_server_facts to true by default

* Wed Nov 23 2016 Jeanne Greulich <jgreulich.simp@onyxpoint.com> - 7.0.0-0
- update requirement versions

* Mon Nov 21 2016 Chris Tessmer <chris.tessmer@onyxpoint.com> - 7.0.0-0
- Updated to compliance_markup version 2
